--- a/Programmatic/Microsoft.Azure.CognitiveServices.LUIS.Programmatic.nuspec
+++ b/Programmatic/Microsoft.Azure.CognitiveServices.LUIS.Programmatic.nuspec
@@ -18,4 +18,12 @@
       <dependency id="System.Net.Http" version="4.3.3"/>
     </dependencies>
   </metadata>
+  <files>
+    <file src="..\build\package\net452\Microsoft.Rest.ClientRuntime.dll" target="lib\net452"/>
+    <file src="..\build\package\net452\Microsoft.Rest.ClientRuntime.Azure.dll" target="lib\net452"/>
+    <file src="..\build\package\net452\Newtonsoft.Json.dll" target="lib\net452"/>
+    <file src="..\build\package\net452\Microsoft.Azure.CognitiveServices.Language.LUIS.Programmatic.dll" target="lib\net452"/>
+    <file src="..\build\package\netstandard2.0\Microsoft.Azure.CognitiveServices.Language.LUIS.Programmatic.dll" target="lib\netstandard2.0"/>
+    <file src="**\*.cs" exclude="**\obj\**\*.cs" target="src" />
+  </files>
 </package>
