--- a/Runtime/Microsoft.Azure.CognitiveServices.LUIS.csproj
+++ b/Runtime/Microsoft.Azure.CognitiveServices.LUIS.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.Rest.ClientRuntime.Azure" Version="3.3.10" />
     <PackageReference Include="System.Net.Http" Version="4.3.3" />
   </ItemGroup>
+  
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="(robocopy /E /XO /R:3 /W:3 &quot;$(TargetDir)..&quot; &quot;$(SolutionDir)build\package&quot; *.*) ^&amp; IF %ERRORLEVEL% LSS 8 SET ERRORLEVEL = 0" />
+  </Target>  
 </Project>
